tests/NormalTests/paczka1/small_fuzzy/16330302.err
Error in line 2: PMx S433 51,9
Error in line 6: 1QVoD1cKm S214 17,7
Error in line 5: jmzfb A723 58,4
Error in line 7: 1QVoD1cKm S433 7,5
